feat(Home-ui): implement  index-section

--- a/index.html
+++ b/index.html
@@ -121,21 +121,21 @@
           <div class="hero-slide active">
             <div
               class="hero-image"
-              style="background-image: url('https://placehold.co/1920x1080')"
+              style="background-image: url('hero1.jpg')"
             ></div>
             <div class="hero-gradient"></div>
           </div>
           <div class="hero-slide">
             <div
               class="hero-image"
-              style="background-image: url('https://placehold.co/1920x1080')"
+              style="background-image: url('hero2.jpg')"
             ></div>
             <div class="hero-gradient"></div>
           </div>
           <div class="hero-slide">
             <div
               class="hero-image"
-              style="background-image: url('https://placehold.co/1920x1080')"
+              style="background-image: url('hero3.jpg')"
             ></div>
             <div class="hero-gradient"></div>
           </div>
@@ -164,7 +164,7 @@
           <div class="story-grid">
             <div class="story-image animate-on-scroll">
               <img
-                src="https://placehold.co/600x600"
+                src="about.jpg"
                 alt="Sarah and Michael"
                 class="rounded-image"
               />
@@ -172,31 +172,14 @@
 
             <div class="story-content">
               <div class="timeline-item animate-on-scroll">
-                <h3 class="timeline-title">How We Met</h3>
+                <h3 class="timeline-title">Let’s celebrate together!</h3>
                 <p class="timeline-text">
-                  We first crossed paths at a mutual friend's birthday party in
-                  the summer of 2020. What started as casual conversation over
-                  shared interests in photography and hiking quickly blossomed
-                  into something more.
-                </p>
-              </div>
-
-              <div class="timeline-item animate-on-scroll">
-                <h3 class="timeline-title">First Date</h3>
-                <p class="timeline-text">
-                  Our first date was at a quaint little café downtown. We talked
-                  for hours, losing track of time as we shared stories and
-                  discovered how much we had in common.
-                </p>
-              </div>
-
-              <div class="timeline-item animate-on-scroll">
-                <h3 class="timeline-title">The Proposal</h3>
-                <p class="timeline-text">
-                  On a crisp autumn evening at sunset, overlooking the city from
-                  our favorite hiking spot, Michael got down on one knee and
-                  asked Sarah to spend forever with him. Through happy tears,
-                  she said yes!
+                  Two hearts, one journey, and a lifetime of love to look
+                  forward to. We are thrilled to invite you to witness the most
+                  beautiful chapter of our story as we say "I do." Surrounded by
+                  love, laughter, and those who mean the most to us, we can’t
+                  wait to celebrate this magical moment together. Join us for a
+                  day filled with joy, memories, and new beginnings.
                 </p>
               </div>
             </div>
@@ -247,7 +230,8 @@
                 </li>
 
                 <li>
-                  <i class="fas fa-utensils"></i> Lunch & Dancing: 12:15 PM
+                  <i class="fas fa-utensils"></i> Lunch & Dancing: 12.10 PM
+                  Onwards
                 </li>
               </ul>
             </div>
@@ -331,46 +315,22 @@
 
           <div class="gallery-grid">
             <div class="gallery-item animate-on-scroll" data-index="0">
-              <img
-                src="https://placehold.co/800x600"
-                alt="Sarah and Michael at the beach"
-                class="gallery-image"
-              />
+              <img src="image1.jpg" class="gallery-image" />
             </div>
             <div class="gallery-item animate-on-scroll" data-index="1">
-              <img
-                src="https://placehold.co/800x600"
-                alt="Engagement photo"
-                class="gallery-image"
-              />
+              <img src="image2.jpg" class="gallery-image" />
             </div>
             <div class="gallery-item animate-on-scroll" data-index="2">
-              <img
-                src="https://placehold.co/800x600"
-                alt="First date"
-                class="gallery-image"
-              />
+              <img src="image4.jpg" class="gallery-image" />
             </div>
             <div class="gallery-item animate-on-scroll" data-index="3">
-              <img
-                src="https://placehold.co/800x600"
-                alt="Hiking together"
-                class="gallery-image"
-              />
+              <img src="image3.jpg" class="gallery-image" />
             </div>
             <div class="gallery-item animate-on-scroll" data-index="4">
-              <img
-                src="https://placehold.co/800x600"
-                alt="Holiday celebration"
-                class="gallery-image"
-              />
+              <img src="image5.jpg" class="gallery-image" />
             </div>
             <div class="gallery-item animate-on-scroll" data-index="5">
-              <img
-                src="https://placehold.co/800x600"
-                alt="Proposal moment"
-                class="gallery-image"
-              />
+              <img src="image6.jpg" class="gallery-image" />
             </div>
           </div>
 
@@ -492,8 +452,8 @@
           <div class="rsvp-footer animate-on-scroll">
             <p>
               If you have any questions, please contact us at
-              <a href="mailto:hasiniaamarasingha@gmail.com" class="email-link">
-                hasiniaamarasingha@gmail.com
+              <a href="mailto:ghasininavodya@gmail.com" class="email-link">
+                ghasininavodya@gmail.com
               </a>
               or call us at
               <a href="tel:+94 71 112 1188" class="phone-link"
