update(Home-ui): implement master-section

--- a/index.html
+++ b/index.html
@@ -171,16 +171,35 @@
             </div>
 
             <div class="story-content">
-              <div class="timeline-item animate-on-scroll">
-                <h3 class="timeline-title">Let’s celebrate together!</h3>
+              <div class="">
+                <h3 class="timeline-title">
+                  <i
+                    class="fas fa-heart"
+                    style="color: var(--pink-500); margin-right: 10px"
+                  ></i>
+                  Let's celebrate together!
+                  <i
+                    class="fas fa-heart"
+                    style="color: var(--pink-500); margin-left: 10px"
+                  ></i>
+                </h3>
                 <p class="timeline-text">
                   Two hearts, one journey, and a lifetime of love to look
                   forward to. We are thrilled to invite you to witness the most
                   beautiful chapter of our story as we say "I do." Surrounded by
-                  love, laughter, and those who mean the most to us, we can’t
+                  love, laughter, and those who mean the most to us, we can't
                   wait to celebrate this magical moment together. Join us for a
                   day filled with joy, memories, and new beginnings.
                 </p>
+                <!-- <div
+                  class="celebration-icon"
+                  style="text-align: center; margin-top: 20px"
+                >
+                  <i
+                    class="fas fa-glass-cheers"
+                    style="font-size: 2rem; color: var(--pink-500)"
+                  ></i>
+                </div> -->
               </div>
             </div>
           </div>
